; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_ds3231.c_ds3231_ctrl_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_ds3231.c_ds3231_ctrl_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ds3231_softc = type { i32, i32 }

@DS3231_CTRL_MASK = common dso_local global i32 0, align 4
@DS3231_CONTROL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"cannot write to RTC.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ds3231_softc*)* @ds3231_ctrl_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ds3231_ctrl_write(%struct.ds3231_softc* %0) #0 {
  %2 = alloca %struct.ds3231_softc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.ds3231_softc* %0, %struct.ds3231_softc** %2, align 8
  %5 = load %struct.ds3231_softc*, %struct.ds3231_softc** %2, align 8
  %6 = getelementptr inbounds %struct.ds3231_softc, %struct.ds3231_softc* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @DS3231_CTRL_MASK, align 4
  %9 = xor i32 %8, -1
  %10 = and i32 %7, %9
  store i32 %10, i32* %4, align 4
  %11 = load %struct.ds3231_softc*, %struct.ds3231_softc** %2, align 8
  %12 = getelementptr inbounds %struct.ds3231_softc, %struct.ds3231_softc* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @DS3231_CONTROL, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @ds3231_write1(i32 %13, i32 %14, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %1
  %20 = load %struct.ds3231_softc*, %struct.ds3231_softc** %2, align 8
  %21 = getelementptr inbounds %struct.ds3231_softc, %struct.ds3231_softc* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @device_printf(i32 %22, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %19, %1
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @ds3231_write1(i32, i32, i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
